amélioration de la doc
