# config/packages/nelmio_api_doc.yaml
@@ -1,9 +1,15 @@
 nelmio_api_doc:
+    models:
+        names:
+            - { alias: AllClients, type: App\Entity\Client, groups: [getClients]},
+            - { alias: ClientDetails, type: App\Entity\Client, groups: [getSingleClient]}
+            - { alias: AllPhones, type: App\Entity\Phone, groups: [getPhones]}
+            - { alias: PhoneDetails, type: App\Entity\Phone, groups: [getSinglePhone]}
     documentation:
         info:
             title: BileMo
             description: Une API pour gérer vos clients et voir nos produits BileMo !
-            version: 2.0.0
+            version: 1.0.0
         paths:
             /api/login_check:
                 post:
@@ -41,6 +47,19 @@ nelmio_api_doc:
                         password:
                             type: string
                             default: password
+                AddClient:
+                    type: object
+                    properties:
+                        firstName:
+                            type: string
+                        lastName:
+                            type: string
+                        email:
+                            type: string
+                        phoneNumber:
+                            type: string
+                        address:
+                            type: string
             securitySchemes:
                 bearerAuth:
                     type: apiKey
@@ -51,3 +70,4 @@ nelmio_api_doc:
     areas: # to filter documented areas
         path_patterns:
             - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
+        disable_default_routes: true
